--- a/src/app/chiefTO/index.css
+++ b/src/app/chiefTO/index.css
@@ -2,3 +2,10 @@
     border-color: #DC3544 !important;
     box-shadow: 0 0 0 0.2rem rgba(220,53,69,.5) !important;
 }
+
+.sort-button:active {
+    background-color: #dee2e6 !important;
+}
+.sort-button:hover {
+    cursor: pointer;
+}
