--- a/src/app/Administrator/catalog/styles.css
+++ b/src/app/Administrator/catalog/styles.css
@@ -7,3 +7,11 @@
     bottom: 0;
     right: 0;
 }
+
+table.table.table-sm.table-hover th.oidTHead, th.oid {
+    text-align: center;
+    width: 5%;
+}
+table.table.table-sm.table-hover td.type {
+    width: 10%;
+}
