--- a/src/app/chiefTO/index.css
+++ b/src/app/chiefTO/index.css
@@ -24,3 +24,11 @@
     width: 100%;
     height: 600px;
 }
+
+.multiselect {
+    box-shadow: #0b2e13;
+}
+
+.delete_button {
+    padding-top: 2px !important;
+}
