--- a/src/app/Administrator/catalog/styles.css
+++ b/src/app/Administrator/catalog/styles.css
@@ -13,3 +13,11 @@ table.table.table-sm tr td.emptyText, th.emptyText {
 .middleColumn {
     text-align: center;
 }
+
+.tableHeader:hover {
+    cursor: pointer;
+}
+
+.tableHeader:active {
+    background-color: #dee2e6 !important;
+}
